fix chart spacing issue caused by g title overlay fix
no show in browser

--- a/dashboard/www/custom.css
+++ b/dashboard/www/custom.css
@@ -232,7 +232,3 @@ input[type="checkbox"]:checked:before {
   border-top-left-radius:0;
   border-bottom-left-radius:0;
 }
-
-.main-svg{
-  margin: 40px 0 0;
-}
